Add using warhead without keycard in hand

--- a/SCPSL-InventoryAccess/SCPSL-InventoryAccess.csproj
+++ b/SCPSL-InventoryAccess/SCPSL-InventoryAccess.csproj
@@ -36,8 +36,12 @@
     <Compile Include="EventHandlers.cs" />
     <Compile Include="Plugin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="WarheadWithoutKeycardPatch.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Reference Include="0Harmony, Version=2.0.2.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Lib.Harmony.2.0.2\lib\net472\0Harmony.dll</HintPath>
+    </Reference>
     <Reference Include="Assembly-CSharp-firstpass, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\EXILED_DLL\Assembly-CSharp-firstpass.dll</HintPath>
@@ -68,6 +72,7 @@
       <HintPath>..\..\EXILED_DLL\Mirror.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Runtime.InteropServices.RuntimeInformation" />
     <Reference Include="UnityEngine, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\EXILED_DLL\UnityEngine.dll</HintPath>
